clusters/my-cluster/apps/lern/overlays/dev/replica_count.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learn-app-dep
  namespace: lern
spec:
  replicas: 1
