clusters/my-cluster/apps/lern/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingr
  namespace: default
  annotations:
    nginx.org/mergeable-ingress-type: "minon"
    # cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: komplikter.servehttp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: learn-app-svc-o1
                port:
                  number: 80
